--- a/src/app/App.css
+++ b/src/app/App.css
@@ -6,3 +6,18 @@
     align-items: center;
     flex-direction: column;
 }
+
+.reloadUserBtn{
+    all: unset;
+    margin-top: 25px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid black;
+    padding: 5px 10px;
+    transition: 0.3s;
+}
+
+.reloadUserBtn:hover{
+    background: black;
+    color: white;
+}
